# Rewind-Git-for-AI-agent-execution

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  platform.yml  quality.yml
benches/: Cargo.toml  README.md  rewind.rs
crates/rewind-capture/: Cargo.toml
crates/rewind-capture/src/: control.rs  lib.rs  recorder.rs
crates/rewind-capture/tests/: capture.rs
crates/rewind-cli/: Cargo.toml
crates/rewind-cli/src/: app.rs  args.rs  artifacts.rs  compare.rs  config.rs  doctor.rs  export.rs  gc.rs  main.rs  output.rs  replay.rs  resolve.rs
crates/rewind-cli/tests/: cli.rs
crates/rewind-domain/: Cargo.toml
crates/rewind-domain/src/: comparison.rs  event.rs  id.rs  lib.rs  run.rs  snapshot.rs  time.rs
crates/rewind-platform/: Cargo.toml
crates/rewind-platform/src/: filesystem.rs  lib.rs  locking.rs  paths.rs  process.rs  pty.rs  terminal.rs
crates/rewind-snapshot/: Cargo.toml
crates/rewind-snapshot/src/: diff.rs  lib.rs  restore.rs  scan.rs
crates/rewind-snapshot/tests/: snapshot_engine.rs
crates/rewind-store/: Cargo.toml
crates/rewind-store/src/: bundle.rs  event.rs  lib.rs  lock.rs  maintenance.rs  object.rs  recovery.rs  run.rs  schema.rs  snapshot.rs
crates/rewind-store/tests/: store.rs
crates/rewind-tui/: Cargo.toml
crates/rewind-tui/src/: lib.rs  model.rs  terminal.rs  ui.rs
docs/: architecture.md  assumptions.md  configuration.md  demo-transcript.txt  index.md  platform-support.md  privacy.md  replay-semantics.md  roadmap.md  storage-format.md  threat-model.md
docs/adr/: 0001-workspace-isolation.md  0002-single-writer-event-ordering.md  0003-snapshot-identity-object-storage.md  0004-sqlite-metadata.md  0005-replay-semantics.md  0006-platform-abstraction.md  0007-terminal-input-privacy.md
docs/development/: installation.md  release-checklist.md  testing.md
fixtures/agents/: breaker.sh  fixer.sh
fixtures/repositories/demo/: README.md  calculator.sh  test.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: archive_path.rs  bundle_decode.rs  control_frame.rs  event_json.rs  object_envelope.rs
xtask/src/: main.rs
