[workspace]
resolver = "3"
members = [
    "crates/rewind-domain",
    "crates/rewind-store",
    "crates/rewind-platform",
    "crates/rewind-snapshot",
    "crates/rewind-capture",
    "crates/rewind-tui",
    "crates/rewind-cli",
    "benches",
    "xtask",
]
default-members = ["crates/rewind-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
crossterm = "0.29.0"
libc = "0.2.186"
portable-pty = "0.9.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.3.18"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.4", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
wildcard_dependencies = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
