[package]
name = "rewind-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rewind-capture = { path = "../crates/rewind-capture" }
rewind-domain = { path = "../crates/rewind-domain" }
rewind-store = { path = "../crates/rewind-store" }
serde_json = "1"

[[bin]]
name = "control_frame"
path = "fuzz_targets/control_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bundle_decode"
path = "fuzz_targets/bundle_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "archive_path"
path = "fuzz_targets/archive_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "event_json"
path = "fuzz_targets/event_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "object_envelope"
path = "fuzz_targets/object_envelope.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
