[package]
name = "rewind-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
blake3.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
rewind-capture = { path = "../rewind-capture" }
rewind-domain = { path = "../rewind-domain" }
rewind-platform = { path = "../rewind-platform" }
rewind-snapshot = { path = "../rewind-snapshot" }
rewind-store = { path = "../rewind-store" }
rewind-tui = { path = "../rewind-tui" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
