[package]
name = "rewind-platform"
version.workspace = true
edition.workspace = true

[dependencies]
libc.workspace = true
portable-pty.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "allow"
rust_2018_idioms = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
