[package]
name = "rewind-store"
version.workspace = true
edition.workspace = true

[dependencies]
blake3.workspace = true
rewind-domain = { path = "../rewind-domain" }
rewind-platform = { path = "../rewind-platform" }
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
